updated css for header, now it shifts when changing routes but looks a little cleaner otherwise, still need to fix excerpts images, and to make it use paper component

--- a/carlin-website/src/App.module.css
+++ b/carlin-website/src/App.module.css
@@ -32,11 +32,13 @@ a {
 
 nav {
   display: grid;
-  grid-template-columns: 1fr 2.5fr;
-  /* font-size: 2rem; */
+  grid-template-columns: 1fr;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
   font-family: "Frank Ruhl Libre", "Montserrat", sans-serif;
   font-weight: 300;
-  font-size: 110%;
+  font-size: 140%;
   text-transform: uppercase;
   background: linear-gradient(
     90deg,
@@ -48,9 +50,11 @@ nav {
 
 nav > ul {
   display: grid;
+  align-items: center;
   grid-auto-flow: column;
   grid-auto-columns: max-content;
   grid-column-gap: 2rem;
   list-style-type: none;
   text-decoration: none;
+  padding-left: 0px;
 }
